openapi-validator/src/test/resources/openapiValidator/ballerina-files/invalidTest/arrayNB.bal
import ballerina/http;

service hello on new http:Listener(9090) {
    resource function get sayHello/[int[][] userId] () returns error? {
    }
}
